--- a/views/StudentRegister.ejs
+++ b/views/StudentRegister.ejs
@@ -1,19 +1,29 @@
 <%- include('partials/header') %> <%- include('navbar') %>
 
 <div class="c-container container">
-    <h1>Student Registeration</h1>
-    <form class="c-prop">
-        <div class="m-5">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="m-5">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="m-5">
-            <button type="submit" class="btn btn-primary">Login</button>
-        </div>
-      </form>
+  <img
+    src="https://images.unsplash.com/photo-1525921429624-479b6a26d84d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+    alt=""
+    class="blur-img"
+  />
+  <h1>Student Registeration</h1>
+  <form class="c-prop">
+    <div class="m-5">
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input
+        type="email"
+        class="form-control"
+        id="exampleInputEmail1"
+        aria-describedby="emailHelp"
+      />
+    </div>
+    <div class="m-5">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" />
+    </div>
+    <div class="m-5">
+      <button type="submit" class="btn btn-primary">Login</button>
+    </div>
+  </form>
 </div>
-<%- include('partials/footer') %> 
+<%- include('partials/footer') %>
