--- a/public/StudentLogin.css
+++ b/public/StudentLogin.css
@@ -15,3 +15,10 @@
         width: 100%;
     }
  }
+
+.blur-img{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    filter: blur(2px);
+}
