--- a/views/FacultyPage.ejs
+++ b/views/FacultyPage.ejs
@@ -1,2 +1,6 @@
 <%- include('partials/header') %> <%- include('navbar') %>
-<h1>Logged in</h1>
+<img
+  src="https://images.unsplash.com/flagged/photo-1554473675-d0904f3cbf38?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fGNvbGxlZ2V8ZW58MHx8MHx8&w=1000&q=80"
+  alt=""
+  class="blur-img"
+/>
