--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,5 @@
 <%- include('partials/header') %> <%- include('navbar') %>
-
+<div class="container d-flex justify-content-center">
+    <h1>Welcome to the Attendance App</h1>
+</div>
 <%- include('partials/footer') %> 
