--- a/views/FacultyRegister.ejs
+++ b/views/FacultyRegister.ejs
@@ -3,7 +3,7 @@
 <div class="c-container container">
   <img src="https://images.unsplash.com/flagged/photo-1554473675-d0904f3cbf38?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fGNvbGxlZ2V8ZW58MHx8MHx8&w=1000&q=80" alt="" class="blur-img">
   <h1>Faculty Registeration</h1>
-  <form class="c-prop">
+  <form class="c-prop" action="/FacultyRegister" method="post">
     <div class="m-5">
       <label for="exampleInputEmail1" class="form-label">Full Name</label>
       <input type="text" class="form-control" placeholder="Full Name" name="facultyName" />
