--- a/public/StudentLogin.css
+++ b/public/StudentLogin.css
@@ -1,6 +1,6 @@
 .c-prop{
-    background-color: black !important;
-    color: white !important;
+    background-color: rgb(77, 77, 77) !important;
+    color: rgb(0, 0, 0) !important;
     width: 50%;
 }
 
