--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -35,6 +35,9 @@
             <li><a class="dropdown-item" href="/FacultyRegister">Register</a></li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/StudentList">Student List</a>
+        </li>
       </ul>
       
     </div>
