--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
-<%- include('partials/header') %> <%- include('navbar') %>
-<div class="container d-flex justify-content-center">
+<%- include('partials/header') %> <%- include('homenavbar') %>
+<div class="container d-flex justify-content-center align-items-center vh-100">
     <h1>Welcome to the Attendance App</h1>
 </div>
 <%- include('partials/footer') %> 
