--- a/views/StudentList.ejs
+++ b/views/StudentList.ejs
@@ -1,25 +1,34 @@
 <%- include('partials/header') %> <%- include('navbar') %>
 
 <div class="container">
+  <form action="/StudentList" method="post">
+    <div class="mb-3 c-width">
+      <label for="exampleFormControlInput1" class="form-label">Date</label>
+      <input type="date" class="form-control" id="exampleFormControlInput1" name="date"/>
+    </div>
     <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Name</th>
-            <th scope="col">Roll No</th>
-          </tr>
-        </thead>
-        <tbody>
-            <% studentArray.forEach(function(student){ %>
-                <tr>
-                    <th scope="row"><%=i%></th>
-                    <td><%= student.name %> </td>
-                    <td><%= student.rollno %></td>
-                  </tr>
-            <% i++ %> 
-            <% }) %>
-        </tbody>
-      </table>
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Present</th>
+          <th scope="col">Name</th>
+          <th scope="col">Roll No</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% studentArray.forEach(function(student){ %>
+        <tr>
+          <th scope="row" name="sid"><%=i%></th>
+          <td><input type="checkbox" value="<%= student._id%>" onChange="this.form.submit"></td>
+          <td name="sname"><%= student.name %></td>
+          <td name="srollno"><%= student.rollno %></td>
+          
+        </tr>
+        <% i++ %> <% }) %>
+      </tbody>
+    </table>
+    <button>Submit</button>
+  </form>
 </div>
 
 <%- include('partials/footer') %>
