--- a/views/StudentRegister.ejs
+++ b/views/StudentRegister.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %> <%- include('navbar') %>
+<%- include('partials/header') %> <%- include('homenavbar') %>
 
 <div class="c-container container">
   <img
