--- a/views/FacultyLogin.ejs
+++ b/views/FacultyLogin.ejs
@@ -7,7 +7,7 @@
     class="blur-img"
   />
   <h1>Faculty Login</h1>
-  <form class="c-prop">
+  <form class="c-prop"  action="/FacultyLogin" method="post">
     <div class="m-5">
       <label for="exampleInputEmail1" class="form-label">Email address</label>
       <input
@@ -15,11 +15,12 @@
         class="form-control"
         id="exampleInputEmail1"
         aria-describedby="emailHelp"
+        name="email"
       />
     </div>
     <div class="m-5">
       <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" />
+      <input type="password" class="form-control" id="exampleInputPassword1" name="password"/>
     </div>
     <div class="m-5">
       <button type="submit" class="btn btn-primary">Login</button>
