--- a/views/StudentList.ejs
+++ b/views/StudentList.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %> <%- include('navbar') %>
+<%- include('partials/header') %> <%- include('Facultynavbar') %>
 
 <div class="container">
   <form action="/StudentList" method="post">
