--- a/views/StudentLogin.ejs
+++ b/views/StudentLogin.ejs
@@ -15,11 +15,13 @@
         class="form-control"
         id="exampleInputEmail1"
         aria-describedby="emailHelp"
+        name="email"
       />
     </div>
     <div class="m-5">
       <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" />
+      <input type="password" class="form-control" id="exampleInputPassword1" name="password"/>
+  
     </div>
     <div class="m-5">
       <button type="submit" class="btn btn-primary">Login</button>
