--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="StudentLogin.css">
     <link rel="stylesheet" href="Page.css">
     <link rel="stylesheet" href="studentList.css">
+    <link rel="stylesheet" href="FacultyPage.css">
 </head>
 <body>
     
