--- a/public/StudentLogin.css
+++ b/public/StudentLogin.css
@@ -1,5 +1,5 @@
 .c-prop{
-    background-color: rgb(77, 77, 77) !important;
+    background-color: rgba(153, 225, 170, 0.467) !important;
     color: rgb(0, 0, 0) !important;
     width: 50%;
 }
