--- a/views/Compose.ejs
+++ b/views/Compose.ejs
@@ -1,9 +1,13 @@
-<%- include('partials/header') %> <%- include('FacultyNavbar') %>
+<%- include('partials/header') %> <%- include('partials/FacultyNavbar') %>
 <div class="c-container d-flex justify-content-center">
   <form class="c-prop" action="/Compose" method="post">
     <div class="m-5">
-      <label for="exampleInputEmail1" class="form-label">Name of Student</label>
+      <label class="form-label">Name of Student</label>
       <input type="text" class="form-control" name="StudentName"/>
+    </div>
+    <div class="m-5">
+      <label class="form-label">Email</label>
+      <input type="email" class="form-control" name="StudentEmail"/>
     </div>
     <div class="m-5">
       <label for="exampleInputPassword1" class="form-label">Roll No</label>
