--- a/views/FacultyRegister.ejs
+++ b/views/FacultyRegister.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %> <%- include('homenavbar') %>
+<%- include('partials/header') %> <%- include('partials/homenavbar') %>
 
 <div class="c-container d-flex">
   <img src="https://images.unsplash.com/flagged/photo-1554473675-d0904f3cbf38?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fGNvbGxlZ2V8ZW58MHx8MHx8&w=1000&q=80" alt="" class="blur-img">
