--- a/public/FacultyPage.css
+++ b/public/FacultyPage.css
@@ -5,9 +5,10 @@
 }
 
 .c-item1{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.814);
     color: white;
     width: 30%;
+    font-size: 17px;
 }
 
 .c-item1 img{
@@ -27,5 +28,16 @@
     background-color: rgb(128, 125, 125);
     color: rgb(13, 12, 12);
     width: 70%;
+}
 
+.c-flex2{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.c-btn{
+    padding: 10px 26px;
+    border-radius: 5px;
+    border: 2px solid #1ab4ff;
 }
