--- a/views/FacultyLogin.ejs
+++ b/views/FacultyLogin.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %> <%- include('homenavbar') %>
+<%- include('partials/header') %> <%- include('partials/homenavbar') %>
 
 <div class="c-container container">
   <img
