--- a/views/StudentList.ejs
+++ b/views/StudentList.ejs
@@ -1,33 +1,27 @@
-<%- include('partials/header') %> <%- include('Facultynavbar') %>
+<%- include('partials/header') %> <%- include('partials/Facultynavbar') %>
 
-<div class="container">
+<div class="container my-5">
   <form action="/StudentList" method="post">
-    <div class="mb-3 c-width">
-      <label for="exampleFormControlInput1" class="form-label">Date</label>
-      <input type="date" class="form-control" id="exampleFormControlInput1" name="date"/>
-    </div>
-    <table class="table">
+    <table class="table table-dark table-striped">
       <thead>
         <tr>
           <th scope="col">ID</th>
-          <th scope="col">Present</th>
           <th scope="col">Name</th>
           <th scope="col">Roll No</th>
+          <th scope="col">Email</th>
         </tr>
       </thead>
       <tbody>
         <% studentArray.forEach(function(student){ %>
         <tr>
           <th scope="row" name="sid"><%=i%></th>
-          <td><input type="checkbox" value="<%= student._id%>" onChange="this.form.submit"></td>
           <td name="sname"><%= student.name %></td>
           <td name="srollno"><%= student.rollno %></td>
-          
+          <td name="srollno"><%= student.email %></td>
         </tr>
         <% i++ %> <% }) %>
       </tbody>
     </table>
-    <button>Submit</button>
   </form>
 </div>
 
