--- a/views/Presenty.ejs
+++ b/views/Presenty.ejs
@@ -1,11 +1,26 @@
 <%- include('partials/header') %> <%- include('partials/Facultynavbar') %>
 
 <div class="container">
-    <div class="mb-3 c-width">
-      <label for="exampleFormControlInput1" class="form-label">Date</label>
-      <input type="date" class="form-control" id="exampleFormControlInput1" name="date"/>
+    <div class="mb-3 mt-3 visible d-flex">
+      <div class="">
+        <label for="exampleFormControlInput1" class="form-label">Date</label>
+        <input type="datetime-local" class="form-control datetime-width"  name="date"/>
+      </div>
+      <div>
+        <label for="exampleFormControlInput1" class=" form-label">Subject</label>
+        <select name="cars" id="cars" class="sub-width form-control">
+          <option value="volvo">Digital Communication</option>
+          <option value="saab">Electromagnetic field theory</option>
+          <option value="mercedes">Database management system</option>
+          <option value="audi">Microcontroller</option>
+          <option value="audi">Fundamentals of java</option>
+          <option value="audi">Computer networks</option>
+        </select>
+      </div>
+
     </div>
-    <table class="table-dark table table-striped print-container">
+    
+    <table class="table-dark table table-striped visible">
       <thead>
         <tr>
           <th scope="col">ID</th>
@@ -18,7 +33,7 @@
         <% studentArray.forEach(function(student){ %>
         <tr>
           <th scope="row" name="sid"><%=i%></th>
-          <td><input type="checkbox" value="<%= student._id%>" onChange="this.form.submit"></td>
+          <td class="present"><input type="checkbox" value="<%= student._id%>" id="check"  class="not-visible">Present</td>
           <td name="sname"><%= student.name %></td>
           <td name="srollno"><%= student.rollno %></td>
         </tr>
@@ -27,5 +42,15 @@
     </table>
     <button class="c-btn" onclick="window.print()">Submit</button>
 </div>
+<script>
+    let checkbox = document.querySelectorAll("#check");
+    let presentAbsent = document.querySelectorAll('.present');
 
+    for (let i = 0; i < checkbox.length; i++) {
+      checkbox[i].addEventListener("click", function(){
+        presentAbsent[i].innerText = "Absent";
+      })
+    }
+  
+</script>
 <%- include('partials/footer') %>
