--- a/views/partials/FacultyNavbar.ejs
+++ b/views/partials/FacultyNavbar.ejs
@@ -23,6 +23,16 @@
             >Student List</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/Presenty"
+            >Attendance</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/FacultyLogin"
+            >Logout</a
+          >
+        </li>
       </ul>
     </div>
   </div>
