--- a/views/partials/StudentNavbar.ejs
+++ b/views/partials/StudentNavbar.ejs
@@ -17,6 +17,11 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/StudentLogin"
+              >Logout</a
+            >
+          </li>
         </ul>
       </div>
     </div>
