--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="Page.css">
     <link rel="stylesheet" href="studentList.css">
     <link rel="stylesheet" href="FacultyPage.css">
+    <script src="index.js"></script>
 </head>
 <body>
     
