--- a/views/partials/FacultyNavbar.ejs
+++ b/views/partials/FacultyNavbar.ejs
@@ -17,7 +17,11 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
-
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/Compose"
+            >Add Student</a
+          >
+        </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/StudentList"
             >Student List</a
