--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,13 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="StudentLogin.css">
-    <link rel="stylesheet" href="Page.css">
-    <link rel="stylesheet" href="studentList.css">
-    <link rel="stylesheet" href="FacultyPage.css">
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="/style/StudentLogin.css">
+    <link rel="stylesheet" href="/style/Page.css">
+    <link rel="stylesheet" href="/style/studentList.css">
+    <link rel="stylesheet" href="/style/FacultyPage.css">
 </head>
 <body>
     
-</body>
-</html>
