--- a/views/FacultyPage.ejs
+++ b/views/FacultyPage.ejs
@@ -5,7 +5,7 @@
       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS57cxS-wC2GujcEE-N_c5epmqhydszCHIk1Q&usqp=CAU"
       alt=""
     />
-    <div class="c-info">
+    <div class="c-info font-label">
       <p>Name : <%=facultyName%></p>
       <p>Email Id : <%=facultyEmail%></p>
       <p>Designation : <%=facultyDesignation%></p>
@@ -17,16 +17,16 @@
   <div class="c-item2">
     <div class="c-flex2">
       <form action="/Compose" method="get">
-        <Button class="c-btn">Add Student</Button>
+        <Button class="c-btn font-label">Add Student</Button>
       </form>
       <form action="/StudentList" method="get">
-        <Button class="c-btn">Students List</Button>
+        <Button class="c-btn font-label">Students List</Button>
       </form>
       <form action="/Presenty" method="get">
-        <Button class="c-btn">Attendance</Button>
+        <Button class="c-btn font-label">Attendance</Button>
       </form>
     </div>
-    <div class="lecture container my-5">
+    <div class="lecture container my-5 font">
       <div class="container">
           <h3>Today's Lectures</h3>
           <table class="table-dark table table-striped">
