--- a/views/Presenty.ejs
+++ b/views/Presenty.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %> <%- include('partials/Facultynavbar') %>
 
-<div class="container">
+<div class="container font">
   <div class="mb-3 mt-3 visible d-flex">
     <div class="">
       <label for="exampleFormControlInput1" class="form-label">Date</label>
