--- a/views/StudentList.ejs
+++ b/views/StudentList.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %> <%- include('partials/Facultynavbar') %>
 
-<div class="container my-5">
+<div class="container my-5 font">
   <form action="/StudentList" method="post">
     <table class="table table-dark table-striped">
       <thead>
