--- a/views/FacultyRegister.ejs
+++ b/views/FacultyRegister.ejs
@@ -1,30 +1,33 @@
 <%- include('partials/header') %> <%- include('partials/homenavbar') %>
-
+<!-- 
 <div class="c-container d-flex">
+
+</div> -->
+<div class="d-flex flex-column align-items-center">
   <img src="https://images.unsplash.com/flagged/photo-1554473675-d0904f3cbf38?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fGNvbGxlZ2V8ZW58MHx8MHx8&w=1000&q=80" alt="" class="blur-img">
-  <h1>Faculty Registeration</h1>
+  <h1 class="m-1">Faculty Registeration</h1>
   <form class="c-prop" action="/FacultyRegister" method="post">
-    <div class="m-2">
-      <label for="exampleInputEmail1" class="form-label">Full Name</label>
+    <div class="m-2 mt-3">
+      <label for="exampleInputEmail1" class="form-label font-label">Full Name</label>
       <input type="text" class="form-control" placeholder="Full Name" name="facultyName" />
     </div>
-    <div class="m-2">
-      <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <div class="m-2 mt-3">
+      <label for="exampleInputEmail1" class="form-label font-label">Email address</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email Address" name="facultyEmail"/>
     </div>
-    <div class="m-2">
-      <label for="Designation" class="form-label">Designation</label>
+    <div class="m-2 mt-3">
+      <label for="Designation" class="form-label font-label">Designation</label>
       <input type="text" class="form-control" id="Designation" placeholder="Designation" name="facultyDesignation"/>
     </div>
-    <div class="m-2">
-      <label for="Number" class="form-label">Number</label>
+    <div class="m-2 mt-3">
+      <label for="Number" class="form-label font-label">Number</label>
       <input type="number" class="form-control" id="Designation" placeholder="Number" name="facultyNumber"/>
     </div>
-    <div class="m-2">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
+    <div class="m-2 mt-3">
+      <label for="exampleInputPassword1" class="form-label font-label">Password</label>
       <input type="password" class="form-control" id="exampleInputPassword1" name="facultyPassword" placeholder="Password"/>
     </div>
-    <div class="m-2">
+    <div class="m-2 mt-3">
       <button type="submit" class="btn btn-primary">Login</button>
     </div>
   </form>
