--- a/views/partials/FacultyNavbar.ejs
+++ b/views/partials/FacultyNavbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">DPU</a>
+    <a class="navbar-brand font-label" href="#">DPU</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -13,31 +13,37 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 c-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link active font-label" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/Compose"
+          <a class="nav-link active font-label" aria-current="page" href="/Compose"
             >Add Student</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/StudentList"
+          <a class="nav-link active font-label" aria-current="page" href="/StudentList"
             >Student List</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/Presenty"
+          <a class="nav-link active font-label" aria-current="page" href="/Presenty"
             >Attendance</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/FacultyLogin"
+          <a class="nav-link active font-label" aria-current="page" href="/FacultyLogin"
             >Logout</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active font-label time" aria-current="page" href="/FacultyLogin"
+            >6:00</a
           >
         </li>
       </ul>
     </div>
+    
   </div>
 </nav>
