--- a/views/partials/StudentNavbar.ejs
+++ b/views/partials/StudentNavbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">DPU</a>
+      <a class="navbar-brand font-label" href="#">DPU</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -12,18 +12,21 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse c-nav" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active font-label" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/StudentLogin"
+            <a class="nav-link active font-label" aria-current="page" href="/StudentLogin"
               >Logout</a
             >
           </li>
         </ul>
       </div>
+    </div>
+    <div class="time">
+
     </div>
   </nav>
   
