--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -15,23 +15,23 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link active font-label c-hover" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle font-label" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Student
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/StudentLogin">Login</a></li>
+            <li><a class="dropdown-item font-label" href="/StudentLogin">Login</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle font-label" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Faculty
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/FacultyLogin">Login</a></li>
-            <li><a class="dropdown-item" href="/FacultyRegister">Register</a></li>
+            <li><a class="dropdown-item font-label" href="/FacultyLogin">Login</a></li>
+            <li><a class="dropdown-item font-label" href="/FacultyRegister">Register</a></li>
           </ul>
         </li>
       </ul>
