--- a/views/FacultyLogin.ejs
+++ b/views/FacultyLogin.ejs
@@ -7,7 +7,7 @@
     class="blur-img"
   />
   <h1>Faculty Login</h1>
-  <form class="c-prop"  action="/FacultyLogin" method="post">
+  <form class="c-prop font-label"  action="/FacultyLogin" method="post">
     <div class="m-5">
       <label for="exampleInputEmail1" class="form-label">Email address</label>
       <input
