--- a/views/Presenty.ejs
+++ b/views/Presenty.ejs
@@ -3,7 +3,7 @@
 <div class="container font">
   <div class="mb-3 mt-3 visible d-flex">
     <div class="">
-      <label for="exampleFormControlInput1" class="form-label">Date</label>
+      <label for="exampleFormControlInput1" class="form-label date">Date</label>
       <input
         type="datetime-local"
         class="form-control datetime-width"
@@ -11,7 +11,7 @@
       />
     </div>
     <div>
-      <label for="exampleFormControlInput1" class="form-label">Subject</label>
+      <label for="exampleFormControlInput1" class="form-label subject">Subject</label>
       <select name="cars" id="cars" class="sub-width form-control">
         <option value="volvo">Digital Communication</option>
         <option value="saab">Electromagnetic field theory</option>
@@ -30,22 +30,26 @@
         <th scope="col">Present</th>
         <th scope="col">Name</th>
         <th scope="col">Roll No</th>
+        <th scope="col" class="not-visible">Remove</th>
       </tr>
     </thead>
     <tbody>
       <% studentArray.forEach(function(student){ %>
       <tr>
-        <th scope="row" name="sid"><%=i%></th>
-        <td class="present">
-          <input
-            type="checkbox"
-            value="<%= student._id%>"
-            id="check"
-            class="not-visible"
-          />Present
-        </td>
-        <td name="sname"><%= student.name %></td>
-        <td name="srollno"><%= student.rollno %></td>
+        <form action="/delete" method="post">
+          <th scope="row" name="sid"><%=i%></th>
+          <td class="present" id="check">
+            <input
+              type="checkbox"
+              value="<%=student._id%>"
+              class="not-visible mx-2"
+              for="check"
+            />Present
+          </td>
+          <td name="sname"><%= student.name %></td>
+          <td name="srollno"><%= student.rollno %></td>
+          <td><button type="submit" value="<%=student._id%>" name="remove" class="not-visible remove-btn">Remove</button></td>
+        </form>
       </tr>
       <% i++ %> <% }) %>
     </tbody>
