--- a/views/Compose.ejs
+++ b/views/Compose.ejs
@@ -14,7 +14,7 @@
       <input type="text" class="form-control" name="StudentRollNo"/>
     </div>
     <div class="m-5">
-      <button type="submit" class="btn btn-primary">Add</button>
+      <button type="submit" class="btn c-btn btn-dark">Add</button>
     </div>
   </form>
 </div>
