--- a/views/StudentLogin.ejs
+++ b/views/StudentLogin.ejs
@@ -7,7 +7,7 @@
     class="blur-img"
   />
   <h1>Student Login</h1>
-  <form class="c-prop" action="/StudentLogin" method="post">
+  <form class="c-prop font-label" action="/StudentLogin" method="post">
     <div class="m-5">
       <label for="exampleInputEmail1" class="form-label">Email address</label>
       <input
