--- a/views/Compose.ejs
+++ b/views/Compose.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %> <%- include('partials/FacultyNavbar') %>
 <div class="c-container d-flex justify-content-center">
-  <form class="c-prop" action="/Compose" method="post">
+  <form class="c-prop font-label" action="/Compose" method="post">
     <div class="m-5">
       <label class="form-label">Name of Student</label>
       <input type="text" class="form-control" name="StudentName"/>
@@ -14,7 +14,7 @@
       <input type="text" class="form-control" name="StudentRollNo"/>
     </div>
     <div class="m-5">
-      <button type="submit" class="btn c-btn btn-dark">Add</button>
+      <button type="submit" class="btn c-btn btn-dark w-100">Add Student</button>
     </div>
   </form>
 </div>
