--- a/views/FacultyRegister.ejs
+++ b/views/FacultyRegister.ejs
@@ -28,7 +28,7 @@
       <input type="password" class="form-control" id="exampleInputPassword1" name="facultyPassword" placeholder="Password"/>
     </div>
     <div class="m-2 mt-3">
-      <button type="submit" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn btn-primary w-100 mt-3">Register</button>
     </div>
   </form>
 </div>
