--- a/public/style/style.css
+++ b/public/style/style.css
@@ -156,6 +156,7 @@ li a:hover{
     padding: 10px 26px;
     border-radius: 5px;
     border: 2px solid #1ab4ff;
+    font-size: 1.3rem;
 }
 
 .remove-btn{
