--- a/views/FacultyLogin.ejs
+++ b/views/FacultyLogin.ejs
@@ -23,7 +23,7 @@
       <input type="password" class="form-control" id="exampleInputPassword1" name="password"/>
     </div>
     <div class="m-5">
-      <button type="submit" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn btn-primary w-100">Login</button>
     </div>
   </form>
 </div>
