--- a/views/StudentLogin.ejs
+++ b/views/StudentLogin.ejs
@@ -26,7 +26,7 @@
       <input type="text" class="form-control" name="rollno"/>
     </div>
     <div class="m-5">
-      <button type="submit" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn btn-primary w-100">Login</button>
     </div>
   </form>
 </div>
