--- a/views/partials/FacultyNavbar.ejs
+++ b/views/partials/FacultyNavbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark faculty-nav">
   <div class="container-fluid">
     <a class="navbar-brand font-label" href="#">DPU</a>
     <button
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 c-nav">
         <li class="nav-item">
-          <a class="nav-link active font-label" aria-current="page" href="/">Home</a>
+          <a class="nav-link active font-label" aria-current="page" href="/FacultyPage">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active font-label" aria-current="page" href="/Compose"
